--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -10,7 +10,7 @@ body {
 	overflow-x: hidden;
 }
 
-.main-container-ravi{
+.main-container-ravi {
 	background-color: red;
 }
 
@@ -66,6 +66,7 @@ body {
 }
 
 #is {
+	height: 240vh;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -123,10 +124,20 @@ body {
 #ideate,
 #innovate,
 #inspire {
-	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+	background-size: 290vw auto;
+
+	@media (min-width: 550px) {
+		background-size: 250vw auto;
+	}
+	@media (min-width: 750px) {
+		background-size: 200vw auto;
+	}
+	@media (min-width: 900px) {
+		background-size: 100vw auto;
+	}
 }
 
 #about-us {
