--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -7,7 +7,7 @@
 	// opacity: 0;
 	transition: clip-path 0.6s;
 
-	#khopdi{
+	#khopdi {
 		cursor: pointer;
 	}
 
@@ -61,7 +61,7 @@
 
 	@media (max-width: 720px) {
 		width: 100%;
-		height: 100%;
+		height: 100vh;
 		clip-path: circle(15% at 100% 0%);
 		#navbar-toggle {
 			display: unset;
