--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,4 +1,6 @@
-#footer {
+@import "../variables";
+
+.footer {
 	border-top: 2px solid $light;
 	height: 20vh;
 	display: flex;
@@ -10,12 +12,12 @@
 		font-size: 1.5rem;
 		margin-bottom: 20px;
 	}
-	&-icons {
+	.footerIcons {
 		font-size: 1.2rem;
 		a {
 			margin: 0 10px;
 			transition: color 0.2s;
-			i:hover {
+			:hover {
 				color: $light;
 				animation: wiggle 0.3s forwards;
 				// transform: translateY(10px);
