--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Six+Caps&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
 
 $black: #000000;
 $dark: #52057b;
