Made some corrections in the 3is section and the navbar logic was improved

--- a/components/Achievements/Achievements.module.scss
+++ b/components/Achievements/Achievements.module.scss
@@ -30,8 +30,9 @@
 			// background-color: rebeccapurple;
 			.achImg {
 				height: 70%;
-				
+
 				background-size: contain;
+				background-position: center;
 				background-repeat: no-repeat;
 			}
 			.achName {
