--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -53,7 +53,6 @@
 	}
 }
 
-
 .scroll-indicator::before {
 	animation: bounce 1s ease infinite;
 	bottom: 2rem;
@@ -105,13 +104,14 @@
 }
 
 .is {
+	height: 240vh;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	.caption {
 		color: white;
 		width: 100%;
-		min-height: 80vh;
+		height: 80vh;
 		text-align: center;
 
 		display: flex;
@@ -119,10 +119,20 @@
 		justify-content: center;
 		align-items: center;
 
-		background-size: cover;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-attachment: fixed;
+		background-size: 290vw auto;
+
+		@media (min-width: 550px) {
+			background-size: 250vw auto;
+		}
+		@media (min-width: 750px) {
+			background-size: 200vw auto;
+		}
+		@media (min-width: 900px) {
+			background-size: 100vw auto;
+		}
 
 		.captionHead {
 			text-transform: uppercase;
