--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -7,7 +7,7 @@
 	// opacity: 0;
 	transition: clip-path 0.6s;
 
-	.khopdi{
+	.khopdi {
 		cursor: pointer;
 	}
 
@@ -78,6 +78,7 @@
 		width: 100%;
 		height: 100%;
 		clip-path: circle(15% at 100% 0%);
+		height: 100vh;
 		.navbarToggle {
 			display: unset;
 			.khopdi {
