--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -3,6 +3,9 @@
 	z-index: 1000000;
 	width: 100%;
 	background-color: rgba(0, 0, 0, 0.432);
+	@supports (-moz-appearance: none) {
+		background-color: rgba(0, 0, 0, 0.856);
+	}
 	backdrop-filter: blur(11px);
 	// opacity: 0;
 	transition: clip-path 0.6s;
