--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Six+Caps&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Six+Caps&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 
 $black: #000000;
 $dark: #52057b;
@@ -9,36 +9,36 @@ $lightest: #bc6ff1;
 
 // Resets
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	outline: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  outline: none;
 }
 body {
-	background-color: #000000;
-	color: white;
-	font-family: sans-serif;
+  background-color: #000000;
+  color: white;
+  font-family: sans-serif;
 }
 html {
-	scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 a {
-	text-decoration: none;
-	color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 li {
-	list-style: none;
-	text-decoration: none;
+  list-style: none;
+  text-decoration: none;
 }
 
 button {
-	border: none;
-	background-color: transparent;
-	color: inherit;
+  border: none;
+  background-color: transparent;
+  color: inherit;
 }
 
 .temp {
-	width: 100%;
-	height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
