--- a/components/Activities/Activities.module.scss
+++ b/components/Activities/Activities.module.scss
@@ -35,7 +35,7 @@
     padding: 2em;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     line-height: 250%;
     .activityContName {
       font-size: 2rem;
