--- a/components/Projects/ProjectSelection/ProjectSelection.module.scss
+++ b/components/Projects/ProjectSelection/ProjectSelection.module.scss
@@ -30,6 +30,7 @@
     a {
       font-size: 2rem;
       border: 2px solid white;
+      border-radius: 2px;
       padding: 0.5em 1em;
       margin: 1em;
       &:hover {
