--- a/components/Teams/TeamSelection/TeamsIndex.module.scss
+++ b/components/Teams/TeamSelection/TeamsIndex.module.scss
@@ -29,6 +29,7 @@
       text-align: center;
       font-size: 2rem;
       border: 2px solid white;
+      border-radius: 2px;
       padding: 0.5em 1em;
       margin: 1em;
       &:hover {
