--- a/components/Projects/OngoingProjects/OngoingProjects.module.scss
+++ b/components/Projects/OngoingProjects/OngoingProjects.module.scss
@@ -12,7 +12,7 @@
     margin-top: 10px;
     background-repeat: no-repeat;
     // background-attachment: fixed;
-    // background-size: 100vw;
+    background-size: 50vw;
     height: 75vh;
     @media (max-width: 650px) {
       height: 40vh;
