--- a/components/Projects/OngoingProjects/OngoingProjects.module.scss
+++ b/components/Projects/OngoingProjects/OngoingProjects.module.scss
@@ -11,7 +11,8 @@
     margin-bottom: 10px;
     margin-top: 10px;
     background-repeat: no-repeat;
-    background-size: 25vw;
+    // background-attachment: fixed;
+    background-size: 50vw;
     height: 75vh;
     @media (max-width: 650px) {
       height: 40vh;
