--- a/components/Activities/Activities.module.scss
+++ b/components/Activities/Activities.module.scss
@@ -43,26 +43,23 @@
       padding-bottom: 0.15em;
       transition: border-bottom 0.3s;
       border-bottom: 1px solid $lightest;
+      .activityIcon {
+        font-size: 1.2rem;
+        float: right;
+        a {
+          margin: 0 10px;
+          transition: color 0.2s;
+          :hover {
+            color: $light;
+            animation: wiggle 0.3s forwards;
+            // transform: translateY(10px);
+          }
+        }
+      }
     }
     .activityContSub {
       font-size: 1rem;
       margin-bottom: 10px;
-    }
-  }
-
-  .activityIcon {
-    font-size: 1.2rem;
-    a {
-      margin: 0 10px;
-      transition: color 0.2s;
-      position: relative;
-      left: 89%;
-      bottom: 150%;
-      :hover {
-        color: $light;
-        animation: wiggle 0.3s forwards;
-        // transform: translateY(10px);
-      }
     }
   }
 
