Added indication when submitting contact us form as on #32

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -1,5 +1,5 @@
 .navbar {
-  position: relative;
+  position: absolute;
   z-index: 1000000;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.432);
