--- a/components/ContactUs/ContactUs.module.scss
+++ b/components/ContactUs/ContactUs.module.scss
@@ -2,11 +2,10 @@
 
 .contactForm {
   width: 100%;
-  height: 100vh;
+   height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
-
   position: relative;
 
   .formOverlay {
@@ -57,7 +56,6 @@
       border-radius: 5px;
     }
 
-
     textarea {
       background-color: black;
       color: white;
@@ -80,6 +78,8 @@
       font-size: 1.1rem;
       cursor: pointer;
     }
+
+
 
     @media (max-width: 1000px) {
       width: 70%;
@@ -105,4 +105,38 @@
       }
     }
   }
+  .submission{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 50px;
+    margin: 10px;
+    height: 200px;
+    padding: 100px;
+    border: 5px solid #892cdc;
+    border-radius: 10px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 25px;
+    box-sizing: border-box;
+    box-shadow: 5px 5px #bf6eeb;
+    // margin-bottom: 50%;
+  }
+  
+}
+
+.Dialog1 {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 50px;
+  padding: 50px;
+  border: 5px solid #892cdc;
+  border-radius: 10px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 25px;
+  box-sizing: border-box;
+  box-shadow: 5px 5px #bf6eeb;
+  margin-top: 0px;
 }
