renaming few elements

--- a/components/Startups/Startups.module.scss
+++ b/components/Startups/Startups.module.scss
@@ -1,6 +1,6 @@
 @import '../variables';
 
-.activitySectionTitle {
+.startupsSectionTitle {
   font-size: 2rem;
   text-align: center;
   width: 50%;
