--- a/components/HomeAboutUs/HomeAboutUs.module.scss
+++ b/components/HomeAboutUs/HomeAboutUs.module.scss
@@ -75,6 +75,60 @@
       }
     }
   }
+
+  .aboutUsCurrent {
+    width: 100%;
+    background-image: linear-gradient(#000000aa, #000000aa),
+      url('/static/images/currentWork.jpg');
+    min-height: 60vh;
+    padding: 3em 0.5em;
+    background-position: center;
+    background-size: cover;
+
+    h1 {
+      padding: 0.5em;
+      font-size: 3rem;
+      // color: $lightest;
+      font-family: 'Oswald', sans-serif;
+      color: white;
+      text-align: center;
+    }
+    .aboutUsFlex {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      font-family: 'Oswald', sans-serif;
+      color: white;
+
+      .left {
+        flex-direction: column;
+        width: 50%;
+        align-items: left;
+        justify-content: left;
+      }
+      .right {
+        width: 50%;
+      }
+
+      .notifsMain {
+        width: 100%;
+        .notif {
+          font-size: 1.3rem;
+          border-bottom: 3px solid rgb(4, 44, 41);
+          border-left: 2px solid rgb(4, 44, 41);
+          padding: 22px;
+          padding-left: 1.5em;
+          border-radius: 30px;
+          border-bottom-right-radius: 0px;
+          transition: transform 0.2s;
+
+          &:hover {
+            transform: translateX(1%);
+          }
+        }
+      }
+    }
+  }
 }
 
 .ourProjects {
