renamed css elements

--- a/components/Startups/Startups.module.scss
+++ b/components/Startups/Startups.module.scss
@@ -15,7 +15,7 @@
   }
 }
 
-.activity {
+.startup {
   width: 70%;
   height: auto;
   margin: 5em auto;
@@ -36,7 +36,7 @@
     transform: scale(1.03);
   }
 
-  .activityImg {
+  .startupImg {
     // margin-right: 1em;
     width: 30%;
     height: 15em;
@@ -45,7 +45,7 @@
     background-repeat: no-repeat;
   }
 
-  .activityCont {
+  .startupCont {
     width: 70%;
     height: 100%;
     padding: 2em;
@@ -54,13 +54,13 @@
     justify-content: flex;
     line-height: 250%;
     text-align: justify;
-    .activityContName {
+    .startupContName {
       font-size: 2rem;
       margin-bottom: 20px;
       padding-bottom: 0.15em;
       transition: border-bottom 0.3s;
       border-bottom: 1px solid $lightest;
-      .activityIcon {
+      .startupIcon {
         font-size: 1.2rem;
         float: right;
         a {
@@ -74,21 +74,21 @@
         }
       }
     }
-    .activityContSub {
+    .startupContSub {
       font-size: 1rem;
       margin-bottom: 10px;
     }
   }
 
   &:hover {
-    .activityCont {
-      .activityContName {
+    .startupCont {
+      .startupContName {
         border-bottom: 1px solid $light;
       }
     }
   }
   @media (max-width: 900px) {
-    .activityImg {
+    .startupImg {
       height: auto;
       width: 50%;
     }
@@ -98,7 +98,7 @@
     margin: 1em auto;
     height: auto;
     flex-direction: column;
-    .activityImg {
+    .startupImg {
       height: 45vh;
       display: block;
       margin-left: auto;
@@ -106,13 +106,13 @@
       width: 80%;
       // background-image: 100vw;
     }
-    .activityCont {
+    .startupCont {
       width: 100%;
       height: max-content;
     }
   }
   @media (max-width: 375px) {
-    .activityImg {
+    .startupImg {
       width: 90%;
     }
   }
