--- a/components/OurReach/HomeReach.module.scss
+++ b/components/OurReach/HomeReach.module.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     padding: 0 1em;
     img {
       margin: 1.5em;
