updated home page

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -108,17 +108,17 @@ body {
 
 #ideate {
   background-image: linear-gradient(#00000081, #00000081),
-    url('/static/images/ideate-final.jpg');
+    url('/static/images/ideate.jpg');
 }
 
 #innovate {
   background-image: linear-gradient(#00000098, #00000098),
-    url('/static/images/innovate-final.jpg');
+    url('/static/images/innovate.jpg');
 }
 
 #inspire {
   background-image: linear-gradient(#00000081, #00000081),
-    url('/static/images/inspire-final.jpg');
+    url('/static/images/inspire.jpg');
 }
 
 #ideate,
