--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -13,6 +13,7 @@
     font-size: 4.6rem;
     letter-spacing: 1px;
     line-height: 130%;
+    margin-top: 150px;
   }
   .heroSub {
     font-size: 1.5rem;
