minor changes and slab division

--- a/components/Sponsors/Sponsors.module.scss
+++ b/components/Sponsors/Sponsors.module.scss
@@ -158,7 +158,7 @@
         width: 100px;
       }
     }
-    .platinumImg:hover {
+    .diamondImg:hover {
       box-shadow: #b0c9e7 0px 20px 30px -10px;
     }
     .goldImg:hover {
