--- a/components/Sponsors/Sponsors.module.scss
+++ b/components/Sponsors/Sponsors.module.scss
@@ -116,6 +116,10 @@
     padding-top: 2em;
     text-align: center;
     // margin-top: 20px;
+    @media (max-width: 650px) {
+      padding-left: 2em;
+      padding-right: 2em;
+    }
   }
   h1 {
     margin: 50px 0 20px;
