--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -9,7 +9,7 @@
   backdrop-filter: blur(11px);
   // opacity: 0;
   transition: clip-path 0.6s;
-
+  // overflow: scroll;
   .khopdi {
     cursor: pointer;
   }
@@ -23,31 +23,7 @@
     min-height: 7vh;
     display: flex;
     align-items: center;
-    .navbarElem {
-      font-family: 'Oswald', sans-serif;
-      font-size: 1.3rem;
-      position: relative;
-      height: 100%;
-      border-bottom: 2px solid transparent;
-      padding: 15px 20px;
-      transition: background-color 0.2s;
-      text-align: center;
-
-      &:hover {
-        // top: 5px;
-        background-color: rgba(255, 255, 255, 0.151);
-      }
-    }
-    @media (max-width: 1000px) {
-      .navbarElem {
-        font-size: 1.2rem;
-      }
-    }
-    @media (max-width: 1000px) {
-      .navbarElem {
-        font-size: 0.9rem;
-      }
-    }
+    
 
     .navHome {
       width: 100px;
@@ -78,6 +54,12 @@
   }
 
   @media (max-width: 780px) {
+    overflow: scroll; 
+    scrollbar-width: none; 
+    -ms-overflow-style: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
     width: 100%;
     height: 100%;
     clip-path: circle(15% at 100% 0%);
