--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -2,21 +2,76 @@
 
 .footer {
   border-top: 2px solid $light;
-  height: 20vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  margin-bottom: 1rem;
+  padding-top: 2rem;
+
   h3 {
     font-weight: normal;
     font-size: 1.5rem;
-    margin-bottom: 20px;
+    margin-left: 65px;
+    margin-top: 20px;
   }
+
+  .container {
+    display: flex;
+    width: 100%;
+    margin-left: 30px;
+
+    .mapContainer {
+      padding-left: 30px;
+      padding-bottom: 30px;
+      width: 100%;
+
+      .heading {
+        font-weight: normal;
+        font-size: 1.25rem;
+        color: $lightest;
+      }
+
+      .linkContainer {
+        margin-top: 20px;
+
+        div {
+          margin-top: 8px;
+
+          :hover {
+            color: $light;
+          }
+        }
+
+        .text {
+          width: 250px;
+          margin-top: 7px;
+        }
+      }
+
+      h5 {
+        padding-top: 20px;
+        color: $lightest;
+      }
+
+      .map {
+        margin-top: 20px;
+        height: 16rem;
+        width: 30rem;
+      }
+    }
+  }
+
   .footerIcons {
     font-size: 1.2rem;
+    margin-top: 20px;
+
+    .copy {
+      margin-top: 20px;
+      font-size: 0.85rem;
+      color: $lightest;
+    }
+
     a {
-      margin: 0 10px;
+      margin-right: 30px;
       transition: color 0.2s;
+
       :hover {
         color: $light;
         animation: wiggle 0.3s forwards;
@@ -26,16 +81,28 @@
   }
 }
 
+@media (max-width: 780px) {
+  .container {
+    flex-direction: column;
+  }
+  .heading{
+    margin-left: 0;
+  }
+}
+
 @keyframes wiggle {
   0% {
     transform: translateY(0);
   }
+
   33% {
     transform: translateY(2px);
   }
+
   66% {
     transform: translateY(-2px);
   }
+
   100% {
     transform: translateY(0);
   }
