--- a/components/Sponsors/Sponsors.module.scss
+++ b/components/Sponsors/Sponsors.module.scss
@@ -159,37 +159,15 @@
       font-size: 0.6rem;
     }
   }
-  .levelImage1 {
+  .levelImage {
     display: block;
     margin: 20px auto;
-    height: auto;
-    width: 400px;
+    height: 50px;
+    width: auto;
     margin-top: 3rem;
     @media (max-width: 650px) {
-      width: 240px;
-      height: auto;
-    }
-  }
-  .levelImage2 {
-    display: block;
-    margin: 20px auto;
-    height: auto;
-    width: 200px;
-    margin-top: 3rem;
-    @media (max-width: 650px) {
-      width: 120px;
-      height: auto;
-    }
-  }
-  .levelImage3 {
-    display: block;
-    margin: 20px auto;
-    height: auto;
-    width: 260px;
-    margin-top: 3rem;
-    @media (max-width: 650px) {
-      width: 150px;
-      height: auto;
+      width: auto;
+      height: 25px;
     }
   }
   hr {
