[ Minor Changes ] : Removes SRA logo from sponsorship page and adds functionality of downloading brochure (#117)
* [ Modifications ] : Removes skull from the logo

* [ Modification ] : Removes skull from the sponsorship teir logos

* [ Feature update ] : Adds functionality of downlaoding brochure

* [ Feature update ] : Adds downloadable pdf of the new sponsorship brochure

* [ Minor Changes ] : Removes extra code for styling by merging all in one as before

* [ Minor Changes ] : Renames pdf of brochure to SRA_brochure_2k23.pdf

* [ Module inclusion ] : Adds File-saver module

* [ Minor Changes ] : Adds Filesaver cleanly

* Adds instruction for installation of dependencies

* Unchanged package-lock.json

--- a/components/Sponsors/Sponsors.module.scss
+++ b/components/Sponsors/Sponsors.module.scss
@@ -162,12 +162,12 @@
   .levelImage {
     display: block;
     margin: 20px auto;
-    height: 150px;
-    width: 150px;
+    height: 50px;
+    width: auto;
     margin-top: 3rem;
     @media (max-width: 650px) {
-      width: 175px;
-      height: 175px;
+      width: auto;
+      height: 25px;
     }
   }
   hr {
