--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -63,7 +63,7 @@
     height: 100%;
     clip-path: circle(15% at 100% 0%);
     height: 100vh;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.35);
     .navbarToggle {
       display: unset;
 
