--- a/components/NavbarItem/NavbarItems.module.scss
+++ b/components/NavbarItem/NavbarItems.module.scss
@@ -65,6 +65,7 @@
       font-size: 1rem;
       position: relative;
       text-align: center;
+      background-color: transparent;
       &:hover {
         // top: 5px;
         background-color: rgba(0, 0, 0, 0);
