[ Still Fixing ] : Changes in font size

--- a/components/NavbarItem/NavbarItems.module.scss
+++ b/components/NavbarItem/NavbarItems.module.scss
@@ -25,6 +25,7 @@
     margin-top: 18px;
     position: absolute;
     width: 200px;
+    padding-bottom: 10px;
     font-size: 1rem;
     transition: background-color 0.2s;
     background-color: rgba(0, 0, 0, 0.7);
@@ -55,29 +56,20 @@
 
   @media (max-width: 780px) {
     .navbarElem {
-      font-size: 1rem;
+      font-size: 1.5rem;
       height: 100%;
       width: 200px;
       background-color: rgba(0, 0, 0, 0);
     }
     &:hover {
       // top: 5px;
-      background-color: rgba(255, 255, 255, 0.155);
+      background-color: rgba(0, 0, 0, 0.35);
     }
     .dropDown {
       margin-top: 0px;
-      font-size: 1rem;
+      font-size: 1.5rem;
       position: relative;
       text-align: center;
-      background-attachment: fixed;
-      &:hover {
-        // top: 5px;
-        background-color: rgba(0, 0, 0, 0.3);
-      }
-    }
-    .subMenu {
-      margin-top: 10px;
-      background-color: rgba(0, 0, 0, 0);
     }
   }
 }
