[ NavBar Issue Resolution ] : Resolves bad interaction with Mobile UI of nested navbar

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -51,7 +51,7 @@
   }
 
   @media (max-width: 780px) {
-    overflow: scroll;
+    // overflow: scroll;
     scrollbar-width: none;
     -ms-overflow-style: none;
 
@@ -75,6 +75,8 @@
       }
     }
     .navbarElemList {
+      overflow: scroll;
+      height: 100%;
       flex-direction: column;
       justify-content: start;
       align-items: center;
