--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -16,6 +16,7 @@
   .heroSub {
     font-size: 1.5rem;
     margin-top: 30px;
+    text-align: center;
   }
   @media (max-width: 650px) {
     .heroHead {
