--- a/components/CorporateSupport/CorporateSupport.module.scss
+++ b/components/CorporateSupport/CorporateSupport.module.scss
@@ -21,6 +21,18 @@
     font-size: 2.5rem;
     font-family: 'Oswald', sans-serif;
   }
+  h2 {
+    margin: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    font-family: 'Oswald', sans-serif;
+  }
+  a {
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 1.2rem;
+    font-family: 'Oswald', sans-serif;
+  }
   button {
     display: block;
     margin: 4rem auto;
@@ -59,9 +71,8 @@
   .CorpText {
     position: absolute;
     margin-top: 100px;
-    font-family: sans-serif;
-    font-size: 1.1rem;
-    width: 100%;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.5rem;
     line-height: 165%;
     padding-top: 2em;
     // margin-top: 20px;
@@ -81,6 +92,14 @@
       width: auto;
       height: 150px;
     }
+  }
+  .Carousel {
+    display: flex;
+    flex-direction: column;
+  }
+  .Carousel_items {
+    width: 45%;
+    align-self: center;
   }
   hr {
     width: 40%;
