[ Minor Functionality ] : Adds hover text

--- a/components/CorporateSupport/CorporateSupport.module.scss
+++ b/components/CorporateSupport/CorporateSupport.module.scss
@@ -65,6 +65,23 @@
       font-size: 0.6rem;
     }
   }
+  .CaroImg {
+    position: relative;
+    :hover {
+      transition-duration: 1000ms;
+      opacity: 0.5;
+    }
+  }
+  .hoverText {
+    position: absolute;
+    font-size: 2em;
+    border-radius: 15px;
+    border-color: black;
+    background-color: rgba(0, 0, 0, 0.501);
+    padding: 100px 1000px 100px 100px;
+    left: 50%;
+    top: 50%;
+  }
   .CorpDiv {
     display: flex;
     align-items: center;
