--- a/components/CorporateSupport/CorporateSupport.module.scss
+++ b/components/CorporateSupport/CorporateSupport.module.scss
@@ -1,12 +1,12 @@
 @import '../variables';
 .CorpSupportMob {
-  width: 80%;
-  height: 300px;
+  width: 100%;
+  height: 250px;
   // background-color: red;
 
   position: relative;
-  left: 10%;
-
+  padding-left: 10%;
+  padding-right: 10%;
   .facilitiesPic {
     width: 100%;
     height: 100%;
@@ -36,8 +36,8 @@
       text-align: center;
       position: absolute;
       font-size: 1.2rem;
-      top: 4.5%;
-      left: 88%;
+      top: 6.5%;
+      left: 83.6%;
       cursor: pointer;
       // color: black;
     }
@@ -51,7 +51,7 @@
     }
 
     // 4% and 120%
-    clip-path: circle(4% at 90.75% 8%);
+    clip-path: circle(4% at 86% 10%);
   }
 }
 .reach {
